# EC551-Temple-Run

./: Nexys4DDR_Master.xdc  README.md  flake.nix
.devcontainer/: devcontainer.json
TempleRun/: README.md  collision.sv  integration.cc  jump.sv
artwork/: GameOver.mem  background.mem  coin.mem  head.mem  img2bin.py  logo.txt  rock.mem  runningGuy.mem  tree.mem  treeLeaves.mem  treeTrunk.mem
design/: EC551.xpr
design/EC551.gen/sources_1/ip/blk_mem_gen_0/: blk_mem_gen_0.vho  blk_mem_gen_0.xml  blk_mem_gen_0_sim_netlist.v  blk_mem_gen_0_sim_netlist.vhdl
design/EC551.gen/sources_1/ip/blk_mem_gen_0/sim/: blk_mem_gen_0.v
design/EC551.gen/sources_1/ip/blk_mem_gen_0/synth/: blk_mem_gen_0.vhd
design/EC551.gen/sources_1/ip/pll/: pll.v  pll.veo  pll.xdc  pll.xml  pll_clk_wiz.v  pll_sim_netlist.v  pll_sim_netlist.vhdl  pll_stub.vhdl
design/EC551.ip_user_files/ip/blk_mem_gen_0/: blk_mem_gen_0.veo  blk_mem_gen_0_stub.v  blk_mem_gen_0_stub.vhdl
design/EC551.ip_user_files/ip/pll/: pll_stub.v
design/EC551.ip_user_files/mem_init_files/: blk_mem_gen_0.mif
design/EC551.ip_user_files/sim_scripts/blk_mem_gen_0/activehdl/: blk_mem_gen_0.sh  compile.do
design/EC551.ip_user_files/sim_scripts/blk_mem_gen_0/modelsim/: blk_mem_gen_0.sh  compile.do
design/EC551.ip_user_files/sim_scripts/blk_mem_gen_0/questa/: README.txt  blk_mem_gen_0.sh  compile.do
design/EC551.ip_user_files/sim_scripts/blk_mem_gen_0/riviera/: blk_mem_gen_0.sh  compile.do  file_info.txt
design/EC551.ip_user_files/sim_scripts/blk_mem_gen_0/vcs/: blk_mem_gen_0.sh
design/EC551.ip_user_files/sim_scripts/blk_mem_gen_0/xcelium/: README.txt  blk_mem_gen_0.sh  run.f
design/EC551.ip_user_files/sim_scripts/blk_mem_gen_0/xsim/: blk_mem_gen_0.sh  file_info.txt  image.coe  vlog.prj
design/EC551.ip_user_files/sim_scripts/pll/activehdl/: compile.do  pll.sh  simulate.do
design/EC551.ip_user_files/sim_scripts/pll/modelsim/: README.txt  compile.do  pll.sh  simulate.do
design/EC551.ip_user_files/sim_scripts/pll/questa/: compile.do  elaborate.do  pll.sh  simulate.do
design/EC551.ip_user_files/sim_scripts/pll/riviera/: compile.do  file_info.txt  pll.sh
design/EC551.ip_user_files/sim_scripts/pll/vcs/: pll.sh
design/EC551.ip_user_files/sim_scripts/pll/xcelium/: README.txt  file_info.txt  pll.sh  run.f
design/EC551.ip_user_files/sim_scripts/pll/xsim/: elab.opt  file_info.txt  pll.sh  vlog.prj
design/EC551.srcs/constrs_1/imports/Downloads/: Nexys-A7-100T-Master.xdc
design/EC551.srcs/sources_1/ip/blk_mem_gen_0/: blk_mem_gen_0.xci
design/EC551.srcs/sources_1/ip/pll/: pll.xci
design/EC551.srcs/sources_1/new/: top.v
sources/: CMakeLists.txt  README.md  bram.v  compositor.cc  compositor.sv  integration.cc  integration.sv  layer.sv  music.v  random_generator.v  spawn.sv  top.v  transformer.sv  vga.v  vram.sv
sources/Cole/: arduinoSignalController  controllerModified.ino  exampleSignalSender
sources/Julia/: clock_divider.v  coin.v  debouncer.v  graphics.v  player.v  random_generator.v  top.v  vga640x480.v
sources/Lea/: BCD_control.v  anode_control.v  characterMovement.v  clkSSD.v  clk_divider.v  fifteen_BCD.v  game.v
sources/Lea/Accelerometer/: ClkDiv_50MHz.v  characterMovement.v  clkdiv_5hz.v  player.v  spi_interface.v  spi_master.v  spicomponent.v  ss.v  top.v
sources/Lea/Arduino/: Accelerometer.ino  README.md  buttonPress.ino  controller.ino
sources/Lea/Scoreboard/: BCD_to_cathodes.v  clkAccelerometer.v  debouncer.v  refreshcounter.v  scoreboard.v  spiMaster.v
sources/Nick/: CMakeLists.txt  collision.sv  compositor.sv  integration.sv  jump.sv  random_generator.v  spawn.sv  transformer.sv  vram.sv
svrender/: .gitignore  CMakeLists.txt  digital-design.qsf  flake.nix  io.tcl
svrender/ip/pll/: ip_pll.ppf  ip_pll.v
svrender/src/: brightness.sv  button.sv  debounce.sv  fb_display.sv  fixed_cross.sv  fixed_dot.sv  fixed_mult.sv  fixed_qq.sv  fixed_qv.sv  fixed_sv.sv  intersect_delay.sv  mod_top.sv  reduce.sv  render.sv  render_reduce.sv  rotation.sv  scan.sv  serial_data.sv  sram_controller.sv  sram_fifo.sv  triangle_intersect.sv  uartrx.sv  vbuffer.v  vbuffer2.txt  writer_tester.sv
svrender/tools/rrender/: .gitignore  Cargo.toml  README.md  flake.nix
svrender/tools/rrender/src/: common.rs  lib.rs  main.rs  quaternion.rs  ray.rs  render.rs  triangle.rs
svrender/verilator/: brightness.cpp  button.cpp  fb_display.cpp  fixed_cross.cpp  fixed_dot.cpp  fixed_mult.cpp  fixed_qq.cpp  fixed_qv.cpp  fixed_sv.cpp  render.cpp  render_reduce.cpp  scan.cpp  serial_data.cpp  triangle_intersect.cpp  triangle_intersect_top.sv  vbuffer.cpp
verilog/: CMakeLists.txt  encode.py  music.cc  music.v
vga_scripts/: .gitignore  img2bin.py  img2coe.py  sprites_generator.ipynb
